Bug 165603 - Zoom settings are not memorized beyond exiting LO Writer
Summary: Zoom settings are not memorized beyond exiting LO Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.2 target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-03-06 08:49 UTC by Adalbert Hanßen
Modified: 2025-03-24 09:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots of this bug (363.84 KB, application/vnd.oasis.opendocument.text)
2025-03-06 08:49 UTC, Adalbert Hanßen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adalbert Hanßen 2025-03-06 08:49:44 UTC
Created attachment 199644 [details]
Screenshots of this bug

How to reproduce this bug:

1. Use Tools>Options>LibreOfficeDev Writer>View

2. set Zoom to use a fixed level of 100%

3. Say ok.

4. Quit LibreOfficeDev

5. Start LibreOfficeDev again

6. observe the setting made in step 2.

It switches back to "Use last document setting", which is a bug.

I would have expected the fixed setting of 100% from step 2.
Comment 1 Buovjaga 2025-03-06 09:53:41 UTC
Coincidentally, I was just looking at bug 132274 where this zoom setting feature was implemented. Probably user data needs to be set to test this.

Bibisected the memorising issue with linux-64-25.2 to e0b3f75e73c1f2f0c8877e57d47f2de499839ee6
SwContentViewConfig already ctor calls Load
Comment 2 Caolán McNamara 2025-03-07 15:52:27 UTC
Maybe one of these option things depends on another in some non-obvious way, the ctor of this already calls Load().
Comment 3 Caolán McNamara 2025-03-07 16:03:38 UTC
ah, I see:

https://gerrit.libreoffice.org/c/core/+/182635 to fix
Comment 4 Buovjaga 2025-03-07 17:52:26 UTC
(In reply to Caolán McNamara from comment #3)
> ah, I see:
> 
> https://gerrit.libreoffice.org/c/core/+/182635 to fix

I verify the fix.
Comment 5 Commit Notification 2025-03-07 18:59:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ce882f1b11187605d5df7e5fb56207ed97cb014e

Resolves: tdf#165603 zoom settings reset to default in ctor

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-03-07 20:07:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8ce0b9964fc198eff0b8b4441d34b54063a2fd83

Resolves: tdf#165603 zoom settings reset to default in ctor

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Adalbert Hanßen 2025-03-24 09:13:30 UTC
I tested it in

Version: 25.2.2.1 (X86_64) / LibreOffice Community
Build ID: 38d746d66d9b82fa248a2e90142b9dd3ddd1d6cd
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

and in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4957d832c76598e78a57324dad5b4de7345a33e2
CPU threads: 8; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded


In both cases. I was able to set the zoom to the preferred user defined value of 148%.

Thank you for fixing this issue.