Resolves: tdf#165603 zoom settings reset to default in ctor

after they were loaded from the config

Change-Id: Id58d997d620b00f7e7ae9a7b9d71fd628d44db8c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182700
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>